# geeflow

./: .gitattributes  .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml  ruff.toml
.github/workflows/: ci.yml
docs/: backends.md  config-reference.md  mcp.md  quickstart.md  training-data.md
examples/forest_monitoring/: README.md  lulc.yaml
examples/forest_monitoring/training/: training_2022.geojson
examples/historical_landsat/: README.md  lulc.yaml
src/lulc_engine/: __init__.py  cli.py  collector.py  pipeline.py
src/lulc_engine/classify/: __init__.py  analysis.py  cross_val.py  extract.py  postprocess.py  train.py
src/lulc_engine/composite/: __init__.py  builder.py
src/lulc_engine/config/: __init__.py  defaults.py  loader.py  schema.py
src/lulc_engine/export/: __init__.py  gee_export.py
src/lulc_engine/features/: __init__.py  indices.py  seasonal.py  texture.py
src/lulc_engine/labels/: __init__.py  loaders.py
src/lulc_engine/sensors/: __init__.py  harmonize.py
src/lulc_engine/templates/: project_lulc.yaml.j2  training_collector.js.j2
src/lulc_engine/utils/: dates.py  ee_session.py  geometry.py
tests/: conftest.py
tests/integration/: test_gee_smoke.py
tests/unit/: test_cli.py  test_collector.py  test_config.py  test_cross_val.py  test_dates.py  test_loaders.py  test_registry.py
